Replaced removed protocol from github for HTTPS

--- a/configs/licheepi_nano_defconfig
+++ b/configs/licheepi_nano_defconfig
@@ -10,7 +10,7 @@ BR2_ROOTFS_POST_IMAGE_SCRIPT="support/scripts/genimage.sh"
 BR2_ROOTFS_POST_SCRIPT_ARGS="-c $(BR2_EXTERNAL_LICHEEPINANO_PATH)/board/licheepinano/genimage.cfg"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
-BR2_LINUX_KERNEL_CUSTOM_REPO_URL="git://github.com/florpor/linux.git"
+BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/florpor/linux.git"
 BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="b18adeb1e60bba3d6aa77e302673b38c41fd5c77"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_LICHEEPINANO_PATH)/board/licheepinano/linux_defconfig"
@@ -27,7 +27,7 @@ BR2_TARGET_ROOTFS_JFFS2_PAD=y
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_GIT=y
-BR2_TARGET_UBOOT_CUSTOM_REPO_URL="git://github.com/florpor/u-boot.git"
+BR2_TARGET_UBOOT_CUSTOM_REPO_URL="https://github.com/florpor/u-boot.git"
 BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="9f068e10bb9ddb4c9610427662be9048e75bcd6a"
 BR2_TARGET_UBOOT_BOARD_DEFCONFIG="licheepi_nano_spiflash"
 BR2_TARGET_UBOOT_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_LICHEEPINANO_PATH)/board/licheepinano/uboot-fragment.config"
